<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="chkbox_whippedcream">v4 in branch test Whipped cream (+ $1)</string>
    <string name="chkbox_chocolate">v3 MASTER Chocolate (+ $2)</string>
    <string name="entername">Enter your name</string>
    <string name="quantity">QUANTITY</string>
    <string name="toppings">TOPPINGS</string>
    <string name="price">PRICE</string>
    <string name="order">Order</string>
    <string name="email">EMAIL</string>

    <string name="name">Name: <xliff:g id="xlName" example="John Smith">%1$s</xliff:g></string>
    <string name="morethan100">Can\'t be more than 100</string>
    <string name="lessthan1">Can\'t be less than 1</string>
    <string name="cAddWhippedCream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%1$b</xliff:g></string>
    <string name="cAddChocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%1$b</xliff:g></string>
    <string name="cQuantity">Quantity: <xliff:g id="xlQuantity" example="3">%1$s</xliff:g></string>
    <string name="cTotal">Total: <xliff:g id="xlTotal" example="4">%1$s</xliff:g></string>
    <string name="cThankYou">Thank you !</string>
    <string name="emailSubject">JustJava order for <xliff:g id="xlName" example="John Smith">%1$s</xliff:g></string>
</resources>
